# The-Celestial-Hero

./: .gitignore  CMakeLists.txt  Makefile  README.md
assets/: sprites.txt
atoms/: conf.c
cfg/: config.hpp.in  config.in.hpp  settings.conf  worldgen.conf
data/: config.yaml
data/assets/: blocks.yaml  icon.aseprite  player.aseprite
data/assets/icons/: icon.aseprite
data/assets/tiles/: blocks.yaml  tiles.aseprite
src/: config.hpp  main.cc  main.cpp  settings.conf.h  worldgen.conf.h  worldgen_setts.hpp
src/entities/: entity.cc  entity.cpp  entity.hh  entity.hpp  player.cc  player.cpp  player.hh  player.hpp
src/game/: game.cc  game.hh
src/gfx/: gfx.hpp  spritelist.cpp  spritelist.hpp  sprites.cpp  sprites.hpp  texture.cc  texture.cpp  texture.hh  texture.hpp
src/physics/: entities.cpp  entities.hpp
src/saves/: saves.cc  saves.hh
src/world/: perlin_noise.cc  perlin_noise.hh  tiles.cc  tiles.cpp  tiles.hh  tiles.hpp  world.cc  world.cpp  world.hh  world.hpp  worldgen.cc  worldgen.hh  worldgen.hpp
